--- a/host.rb.example
+++ b/host.rb.example
@@ -1,4 +1,4 @@
 # EU Target
-host = '75.101.145.87'
+$default_host = '75.101.145.87'
 # AP Target
-#host = '75.101.163.44'
+#$default_host = '75.101.163.44'
